# thermopyl

./: .gitignore  README.md  basesetup.py  pyproject.toml  pytest.ini  setup.py  test_full_files_output.txt  test_output.txt
devtools/: __init__.py  check_dependencies.py  compiler_detection.py  find_packages.py  static_library.py  versioning.py
devtools/angela/: build.sh  run_generateDS.py
devtools/conda-recipe/: README.md  build.sh  meta.yaml
devtools/travis-ci/: after_success.sh  install.sh  push-docs-to-s3.py
thermopyl/: __init__.py  archivetools.py  thermoml_lib.py  thermoml_schema.py  utils.py  version.py
thermopyl/cli/: parse_xml.py
thermopyl/core/: chemistry_utils.py  parser.py  schema.py  update_archive.py  utils.py
thermopyl/scripts/: parse_xml.py  update_archive.py
thermopyl/tests/: _test_pandas.py  _test_schema.py  test_full_files.py  test_thermolib.py  test_thermoml_archive.py
